# datagrid5

./: .gitignore  BUILD.md  Cargo.toml  README.ja.md  README.md  REFACTORING.md  REFACTORING_NEXT_STEPS.md  TASK.md  build.sh  deploy_demo.sh  fix_fields.py  index.html  serve.sh
docs/: API_REFERENCE.ja.md  API_REFERENCE.md
examples/: advanced-config-example-v2.html  advanced-config-example.html  clipboard-example-v2.html  column-grouping-example-v2.html  column-grouping-example.html  context-menu-editing-example.html  context-menu-example-v2.html  context-menu-example.html  editing-example-simple.html  editing-example.html  full-screen-resize-example.html  index.html  readonly-columns-example-v2.html  readonly-columns-example.html  responsive-resize-example-v2.html  responsive-resize-example.html  sales-analysis-example-v2.html  sales-analysis-example.html  simple-usage-v2.html  simple-usage.html  validation-example-v2.html  validation-example.html  worker-example.html
pkg/: LICENSE  README.md  datagrid5.d.ts  datagrid5.js  datagrid5_bg.wasm  datagrid5_bg.wasm.d.ts  package.json
src/: error.rs  lib.rs
src/core/: cell.rs  grid.rs  mod.rs  viewport.rs
src/features/: clipboard.rs  editing.rs  mod.rs  resize.rs  search.rs  selection.rs  undo_redo.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/renderer/: mod.rs  shader.rs  text.rs  webgl.rs
www/: README.md  datagrid5-wrapper.js  index.html  styles.css
