[package]
name = "datagrid5"
version = "0.1.0"
edition = "2021"
authors = ["datagrid5 contributors"]
description = "Ultra-fast WebAssembly-based grid control for browsers"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
    "console",
    "Performance",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "ImageData",
    "HtmlElement",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
] }
js-sys = "0.3"
wee_alloc = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
